--- a/app/src/main/res/drawable/rounded4.xml
+++ b/app/src/main/res/drawable/rounded4.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
-    <solid android:color="#FFFFFF"/>
+    <solid android:color="@color/white"/>
     <corners
         android:bottomRightRadius="15dp"
         android:bottomLeftRadius="15dp"
         android:topLeftRadius="15dp"
         android:topRightRadius="15dp"/>
+    <padding
+        android:bottom="-1dp"
+        android:right="-1dp"
+        android:left="-1dp"/>
+    <stroke
+        android:width="1dp"
+        android:color="@android:color/darker_gray" />
+
 </shape>
