Feat :: 마이 페이지 design

--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MyPageActivity">
 
 
@@ -13,10 +14,19 @@
       android:layout_height="40dp"
       android:gravity="center"
       android:background="@color/teal_200">
-    <TextView
+
+      <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-      android:text="마이페이지"
-      android:fontFamily="@font/bmdohyun"/>
+        android:text="마이페이지"
+        android:fontFamily="@font/bmdohyun"/>
+
   </LinearLayout>
+
+  <View
+      android:layout_width="match_parent"
+      android:layout_height="2dp"
+      android:background="@color/black"/>
+
+
 </LinearLayout>
