--- a/app/src/main/res/layout/item_view.xml
+++ b/app/src/main/res/layout/item_view.xml
@@ -53,11 +53,11 @@
                 android:text="인원 : 1/5" />
 
             <TextView
-                android:id="@+id/tv_price"
+                android:id="@+id/tv_ID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:text="무보수" />
+                android:text="id : 1" />
         </LinearLayout>
 
         <FrameLayout
