--- a/app/src/main/res/layout/activity_see.xml
+++ b/app/src/main/res/layout/activity_see.xml
@@ -115,13 +115,13 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="88dp"
+            android:layout_marginTop="16dp"
             android:text="참여 인원 : "
             android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView5"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView5"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintHorizontal_bias="0.7"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_seePlace"
@@ -143,6 +143,31 @@
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="@+id/textView6"
             app:layout_constraintStart_toEndOf="@+id/textView6"
-            app:layout_constraintTop_toTopOf="@+id/textView6" />
+            app:layout_constraintTop_toTopOf="@+id/textView6"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <TextView
+            android:id="@+id/tv_mg3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="64dp"
+            android:text="요청자"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_seePlace"
+            app:layout_constraintStart_toEndOf="@+id/tv_seePlace"
+            app:layout_constraintTop_toTopOf="@+id/tv_seePlace"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:text="name"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_mg3"
+            app:layout_constraintStart_toEndOf="@+id/tv_mg3"
+            app:layout_constraintTop_toTopOf="@+id/tv_mg3"
+            app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
