--- a/app/src/main/res/layout/activity_my_page.xml
+++ b/app/src/main/res/layout/activity_my_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,19 +9,28 @@
     tools:context=".MyPageActivity">
 
 
-  <LinearLayout
+  <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="40dp"
-      android:gravity="center"
       android:background="@color/teal_200">
 
       <TextView
         android:layout_width="wrap_content"
+          android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:text="마이페이지"
         android:fontFamily="@font/bmdohyun"/>
 
-  </LinearLayout>
+      <ImageButton
+          android:id="@+id/ib_back"
+          android:layout_marginLeft="20dp"
+          android:background="@android:color/transparent"
+          android:layout_gravity="center_vertical"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+
+  </FrameLayout>
 
   <View
       android:layout_width="match_parent"
