--- a/app/src/main/res/layout/activity_see.xml
+++ b/app/src/main/res/layout/activity_see.xml
@@ -38,6 +38,7 @@
         android:background="@color/black"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/tv_join"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -61,13 +62,13 @@
             app:srcCompat="@drawable/nextt" />
 
         <TextView
-            android:id="@+id/tv_join"
+            android:id="@+id/tv_Join"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="36dp"
+            android:fontFamily="@font/bmdohyun"
             android:text="참여하기"
             android:textSize="50dp"
-            android:fontFamily="@font/bmdohyun"
             app:layout_constraintBottom_toTopOf="@+id/ib_join"
             app:layout_constraintEnd_toEndOf="@+id/ib_join"
             app:layout_constraintHorizontal_bias="0.513"
@@ -87,7 +88,6 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:textSize="20dp"
             android:id="@+id/tv_seeContent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -95,6 +95,7 @@
             android:layout_marginTop="56dp"
             android:layout_marginEnd="8dp"
             android:text="Content"
+            android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_seeTitle" />
