--- a/app/src/main/res/layout/activity_see.xml
+++ b/app/src/main/res/layout/activity_see.xml
@@ -104,12 +104,12 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="404dp"
+            android:layout_marginBottom="408dp"
             android:text="장소 :"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintHorizontal_bias="0.425"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -151,13 +151,13 @@
             android:id="@+id/tv_mg3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="64dp"
+            android:layout_marginTop="36dp"
             android:text="요청자"
             android:textSize="20dp"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_seePlace"
-            app:layout_constraintStart_toEndOf="@+id/tv_seePlace"
-            app:layout_constraintTop_toTopOf="@+id/tv_seePlace"
-            app:layout_constraintVertical_bias="1.0" />
+            app:layout_constraintEnd_toEndOf="@+id/textView5"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/textView5"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
         <TextView
             android:id="@+id/tv_name"
